// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`vite_config > explicit: --config vite.config.ts fails because it is treated as a plain .ts file 1`] = `
"--------------------
arguments: --check --config vite.config.ts test.ts
working directory: vite_config/fixtures/monorepo/packages/app
exit code: 1
--- STDOUT ---------

--- STDERR ---------
Failed to load configuration file.
<cwd>/vite.config.ts
Error [ERR_MODULE_NOT_FOUND]: Cannot find package 'vite' imported from <cwd>/vite.config.ts
Did you mean to import "vite/dist/node/index.js"?
Ensure the file has a valid default export of a JSON-serializable configuration object.
--------------------"
`;

exports[`vite_config > ignored: monorepo child vite.config.ts is ignored, root oxfmtrc is used 1`] = `
"--------------------
arguments: --check test.ts
working directory: vite_config/fixtures/monorepo/packages/app
exit code: 1
--- STDOUT ---------
Checking formatting...

test.ts (<variable>ms)

Format issues found in above 1 files. Run without \`--check\` to fix.
Finished in <variable>ms on 1 files using 1 threads.
--- STDERR ---------

--------------------"
`;

exports[`vite_config > ignored: parent vite.config.ts is also ignored without VP_VERSION 1`] = `
"--------------------
arguments: --check test.ts
working directory: vite_config/fixtures/basic/child
exit code: 0
--- STDOUT ---------
Checking formatting...

All matched files use the correct format.
Finished in <variable>ms on 1 files using 1 threads.
--- STDERR ---------

--------------------"
`;

exports[`vite_config > ignored: vite.config.ts is ignored without VP_VERSION 1`] = `
"--------------------
arguments: --check test.ts
working directory: vite_config/fixtures/basic
exit code: 0
--- STDOUT ---------
Checking formatting...

All matched files use the correct format.
Finished in <variable>ms on 1 files using 1 threads.
--- STDERR ---------

--------------------"
`;
